--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,10 @@ dependencies {
 	// For testing and other utilities
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.reflections:reflections:0.9.12'
+
+	// Add Dagger dependencies
+	implementation 'com.google.dagger:dagger:2.28.1'
+	annotationProcessor 'com.google.dagger:dagger-compiler:2.28.1'
 }
 
 // Make sure annotation processors are specified in the correct order
